<resources>
    <string name="app_name">My Application</string>
    <string name="activity_puzzle_a">A</string>

    <string name="activity_puzle_a">A</string>
    <string name="activity_puzzle_b">B</string>
    <string name="activity_puzle_c">C</string>
    <string name="activity_puzle_d">D</string>
    <string name="activity_puzle_e">E</string>
    <string name="activity_puzle_f">F</string>
    <string name="activity_puzle_g">G</string>
    <string name="activity_puzle_h">H</string>
    <string name="activity_main_move_to_puzzle">MOVE to Puzzle</string>
    <string name="activitiy_splash_splash_screen">Splash Screen</string>

</resources>
