<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PuzzleActivity"
        >

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_e"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/activity_puzle_e"
            app:layout_constraintEnd_toEndOf="@+id/btn_a"
            app:layout_constraintStart_toStartOf="@+id/btn_a"
            app:layout_constraintTop_toBottomOf="@+id/btn_a" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_f"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/activity_puzle_f"

            app:layout_constraintEnd_toEndOf="@+id/btn_b"
            app:layout_constraintStart_toStartOf="@+id/btn_b"
            app:layout_constraintTop_toBottomOf="@+id/btn_b" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_g"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/activity_puzle_g"

            app:layout_constraintEnd_toEndOf="@+id/btn_c"
            app:layout_constraintStart_toStartOf="@+id/btn_c"
            app:layout_constraintTop_toBottomOf="@+id/btn_c" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_h"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/activity_puzle_h"

            app:layout_constraintEnd_toEndOf="@+id/btn_d"
            app:layout_constraintStart_toStartOf="@+id/btn_d"
            app:layout_constraintTop_toBottomOf="@+id/btn_d" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_a"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:text="@string/activity_puzle_a"
            app:layout_constraintEnd_toStartOf="@+id/btn_b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_b"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"

            android:text="@string/activity_puzzle_b"

            app:layout_constraintEnd_toStartOf="@+id/btn_c"
            app:layout_constraintStart_toEndOf="@+id/btn_a"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_c"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"

            android:text="@string/activity_puzle_c"
            app:layout_constraintEnd_toStartOf="@+id/btn_d"
            app:layout_constraintStart_toEndOf="@+id/btn_b"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_d"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"

            android:text="@string/activity_puzle_d"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_c"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>